# course-2

./: README.md  Vagrantfile
AaDS/: CMakeLists.txt
AaDS/lab_01/: 3311_baimuhamedov_lab01.docx  lab_01_array.cpp  lab_01_rand_array.cpp  lab_02_list.cpp  lab_02_rand_list.cpp  lab_03_array_of_bytes.cpp  lab_03_rand_array_of_bytes.cpp  lab_04_machine_word.cpp  lab_04_rand_mw.cpp  tempCodeRunnerFile.cpp
AaDS/lab_02/: 3311_baimuhamedov_lab02.docx  Array.h  Barray.cpp  Barray.h  List.cpp  List.h  Mword.cpp  Mword.h  array.cpp  main.cpp  tempCodeRunnerFile.cpp  tempCodeRunnerFile.h  test.cpp
AaDS/lab_03/: 3311_Arshin_laba_3.docx  3311_baimuhamedov_lab03.cpp  3311_baimuhamedov_lab03.docx  lab03_str.cpp  lab03other.cpp  lab04.cpp  lab04sw.cpp  lab_03_task.txt  tempCodeRunnerFile.cpp
AaDS/lab_04/: 3311_baimuhamedov_lab04.docx  lab04.cpp  ot.cpp  task.txt  test.txt
AaDS/lab_05/: 3311_Arshin_laba_1.docx  3311_baimuhamedov_lab01.docx  shape.cpp  shape.h  shape_exceptions.h
AaDS/lab_05/main/: screen.h  shape.cpp  shape.h
AaDS/lab_06/: 3311_baimuhamedov_lab02.docx  3311_baimuhamedov_lab03.docx  lab_06.cpp
AaDS/lab_08/: 3311_baimuhamedov_lab08.docx
DM/: 01_integer_arithmetic.py  02_numeral_system.py  04_continued fractions.py  05_remainder arithmetic.py  06_cryptography.py  tempCodeRunnerFile.py
Math/DM/: dm.py  (+7 more)
OECMaS/: 3311-baimuhamedov-coursework2.c  3311_baimuhamedov_lab01.cpp  3311_baimuhamedov_lab01.docx  lab_01.cpp  limitstest.cpp  ОЭВМ_МетодУказ_лаб_раб.doc
OOP/: lab_01.java
OS/: lab_01_task1.cpp  lablab.cpp  nlab_01.cpp  tempCodeRunnerFile.cpp  test.cpp
(+277 files in other folders)
